# megham

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  versions.json
.github/workflows/: bumpversion.yaml  release.yml
0.5/: 404.html  index.html  sitemap.xml
0.5.1/: 404.html  index.html  objects.inv  sitemap.xml
0.5.1/joint_cpd/: index.html
0.5.1/search/: search_index.json
0.5/joint_cpd/: index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/joint_cpd/: index.html
0.6.0/search/: search_index.json
0.6.1/: 404.html  index.html  sitemap.xml
0.6.1/joint_cpd/: index.html
0.6.1/search/: search_index.json
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/joint_cpd/: index.html
0.7.0/search/: search_index.json
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/joint_cpd/: index.html
1.0.0/search/: search_index.json
1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.1.0/joint_cpd/: index.html
1.1.0/search/: search_index.json
1.2.0/: 404.html  index.html  objects.inv  sitemap.xml
1.2.0/joint_cpd/: index.html
1.2.0/search/: search_index.json
1.3.0/: 404.html  index.html  objects.inv  sitemap.xml
1.3.0/joint_cpd/: index.html
1.3.0/search/: search_index.json
1.3.1/: 404.html  index.html  sitemap.xml
1.3.1/affine/: index.html
1.3.1/joint_cpd/: index.html
1.3.1/search/: search_index.json
1.4.0/: 404.html  index.html  objects.inv  sitemap.xml
1.4.0/affine/: index.html
1.4.0/joint_cpd/: index.html
1.4.0/search/: search_index.json
docs/: affine.md  joint_cpd.md
joint_cpd/: index.html
megham/: mds.py  transform.py  utils.py
megham/registration/: cpd.py
reference/SUMMARY/: index.html
reference/mds/: index.html
reference/transform/: index.html
search/: search_index.json
(+52 files in other folders)
